frontend/test/should_fail/index_pattern_multiple_edge_index_multiple_access_crossed.grg
#using "index_multiple_model.gm"

rule i {
	-e:E{multiple(Ei >= 0, E1j <= 1, E2j >= 42, Ei <= 44)}->;

	modify {
	}
}
